--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -46,6 +46,21 @@ spring:
             client-secret: ${GOOGLE_CLIENT_SECRET:}
             scope: profile, email
             redirect-uri: "{baseUrl}/login/oauth2/code/google"
+  mail:
+    host: ${SPRING_MAIL_HOST:smtp.gmail.com}
+    port: ${SPRING_MAIL_PORT:587}
+    username: ${SPRING_MAIL_USERNAME}
+    password: ${SPRING_MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
 
 jwt:
   private-key-path: ${JWT_PRIVATE_KEY_PATH:file:./keys/private_key.pem}
